--- a/hello-api/pom.xml
+++ b/hello-api/pom.xml
@@ -10,12 +10,20 @@
     </parent>
     <groupId>pis.projekt</groupId>
     <artifactId>hello-api</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.4-SNAPSHOT</version>
     <name>hello-api</name>
     <description>hello-api</description>
     <properties>
         <java.version>21</java.version>
     </properties>
+
+    <distributionManagement>
+        <snapshotRepository>
+            <id>maven-snapshots</id>
+            <url>http://localhost:8081/repository/maven-snapshots/</url>
+        </snapshotRepository>
+    </distributionManagement>
+
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
