Trying to implement ProductSearchController working with real database

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=api
+spring.datasource.url=jdbc:postgresql://localhost:5432/allegro_db
+spring.datasource.username=secret
+spring.datasource.password=secret
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.mvc.format.date-time=iso
