--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=api
-spring.datasource.url=jdbc:postgresql://localhost:5432/allegro_db
+spring.datasource.url=secret
 spring.datasource.username=secret
 spring.datasource.password=secret
 spring.datasource.driver-class-name=org.postgresql.Driver
