--- a/api/pom.xml
+++ b/api/pom.xml
@@ -67,12 +67,16 @@
             <scope>test</scope>
         </dependency>
 
-        <!-- Mockito for mocking -->
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
             <version>3.12.4</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.modelmapper</groupId>
+            <artifactId>modelmapper</artifactId>
+            <version>2.4.4</version> <!-- Replace with the latest version -->
         </dependency>
     </dependencies>
 
