--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -5,4 +5,4 @@ spring.datasource.password=secret
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
-spring.mvc.format.date-time=iso
+upload.dir=${user.dir}/uploads
