Docker Compose files

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=api
-spring.datasource.url=secret
-spring.datasource.username=secret
-spring.datasource.password=secret
+spring.datasource.url=jdbc:postgresql://localhost:5432/pis
+spring.datasource.username=user
+spring.datasource.password=password
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
