--- a/api/pom.xml
+++ b/api/pom.xml
@@ -8,10 +8,10 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>pis24l.projekt</groupId>
-    <artifactId>api</artifactId>
+    <artifactId>api_client</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>api</name>
-    <description>api</description>
+    <name>api_client</name>
+    <description>api_client</description>
     <properties>
         <java.version>17</java.version>
     </properties>
