Changing source to MongoDb

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -1,11 +1,14 @@
 spring.application.name=api
-spring.datasource.url=jdbc:postgresql://localhost:5432/pis
-spring.datasource.username=user
-spring.datasource.password=password
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update
+
+# MongoDB Configuration
+spring.data.mongodb.url=secret
+spring.data.mongodb.username=secret
+spring.data.mongodb.password=secret
+
+# File upload directory
 upload.dir=${user.dir}/uploads
+
+# Kafka Configuration
 spring.kafka.bootstrap-servers=localhost:9092
 spring.kafka.consumer.group-id=my-group
 spring.kafka.consumer.auto-offset-reset=earliest
