--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
-DB_USER=user
-DB_PASSWORD=password
+POSTGRES_DB_USER=user
+POSTGRES_DB_PASSWORD=password
 DB_NAME=pis
+MONGO_DB_USER=user
+MONGO_DB_PASSWORD=password
