--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -1,14 +1,17 @@
-spring.application.name=api
-spring.datasource.url=jdbc:postgresql://localhost:5432/pis
-spring.datasource.username=user
-spring.datasource.password=password
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update
+spring.application.name=api_seller
+
+# MongoDB Configuration
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration,org.springframework.boot.autoconfigure.orm.jpa.HibernateJpaAutoConfiguration
+spring.data.mongodb.uri=mongodb://localhost:27017/
+spring.data.mongodb.username=mongo
+spring.data.mongodb.password=papiezpolak
+
+# File upload directory
 upload.dir=${user.dir}/uploads
+
+# Kafka Configuration
 spring.kafka.bootstrap-servers=localhost:9092
 spring.kafka.consumer.group-id=my-group
 spring.kafka.consumer.auto-offset-reset=earliest
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
-
