PIS-24 Models refactoring for MongoDB

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -2,9 +2,7 @@ spring.application.name=api_seller
 
 # MongoDB Configuration
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration,org.springframework.boot.autoconfigure.orm.jpa.HibernateJpaAutoConfiguration
-spring.data.mongodb.uri=mongodb://localhost:27017/
-spring.data.mongodb.username=mongo
-spring.data.mongodb.password=papiezpolak
+spring.data.mongodb.uri=mongodb://mongo:papiezpolak@localhost:27017/pis?authSource=admin
 
 # File upload directory
 upload.dir=${user.dir}/uploads
