--- a/api/pom.xml
+++ b/api/pom.xml
@@ -55,6 +55,14 @@
             <artifactId>spring-boot-starter-data-elasticsearch</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-elasticsearch</artifactId>
+        </dependency>
+
+
+
+
         <!-- JUnit Jupiter API and Engine -->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
