--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -13,7 +13,8 @@ spring.kafka.consumer.group-id=my-group
 spring.kafka.consumer.auto-offset-reset=earliest
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
-# Elasticsearch configuration
-spring.elasticsearch.uris=http://localhost:9200
-spring.elasticsearch.username=elastic
-spring.elasticsearch.password=password
+
+# Elasticsearch's configuration
+#spring.elasticsearch.uris=http://localhost:9200
+#spring.elasticsearch.username=elastic
+#spring.elasticsearch.password=password
