--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -15,6 +15,6 @@ spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.Str
 spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 
 # Elasticsearch's configuration
-#spring.elasticsearch.uris=http://localhost:9200
-#spring.elasticsearch.username=elastic
-#spring.elasticsearch.password=password
+spring.elasticsearch.uris=http://localhost:9200
+spring.elasticsearch.username=elastic
+spring.elasticsearch.password=password
