--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=api_seller
 
 # MongoDB Configuration
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration,org.springframework.boot.autoconfigure.orm.jpa.HibernateJpaAutoConfiguration
-spring.data.mongodb.uri=mongodb://mongo:papiezpolak@localhost:27017/pis?authSource=admin
+spring.data.mongodb.uri=secret
 
 # File upload directory
 upload.dir=${user.dir}/uploads
