--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -9,10 +9,12 @@ upload.dir=${user.dir}/uploads
 
 # Kafka Configuration
 spring.kafka.bootstrap-servers=localhost:9092
-spring.kafka.consumer.group-id=my-group
+spring.kafka.consumer.group-id=group_id
 spring.kafka.consumer.auto-offset-reset=earliest
+
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
-spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
+spring.kafka.consumer.properties.spring.json.trusted.packages=*
 # Elasticsearch configuration
 spring.elasticsearch.uris=http://localhost:9200
 spring.elasticsearch.username=elastic
