--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -19,3 +19,6 @@ spring.kafka.consumer.properties.spring.json.trusted.packages=*
 spring.elasticsearch.uris=http://localhost:9200
 spring.elasticsearch.username=elastic
 spring.elasticsearch.password=password
+
+nginx.url=http://localhost
+nginx.upload.url=http://localhost/upload
