--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -16,7 +16,7 @@ spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.Str
 spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
 spring.kafka.consumer.properties.spring.json.trusted.packages=*
 # Elasticsearch configuration
-spring.elasticsearch.uris=http://localhost:9200
+spring.elasticsearch.uris=secret
 spring.elasticsearch.username=elastic
 spring.elasticsearch.password=password
 
