--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -5,14 +5,6 @@ RUN chmod +x ./mvnw
 RUN ./mvnw clean install -DskipTests
 
 FROM eclipse-temurin:17
-WORKDIR /app
-RUN apt-get update && apt-get install -y wait-for-it
-RUN echo "spring.datasource.url=jdbc:postgresql://postgres:5432/${DB_NAME}" > application.properties && \
-    echo "spring.datasource.username=${DB_USER}" >> application.properties && \
-    echo "spring.datasource.password=${DB_PASSWORD}" >> application.properties && \
-    echo "spring.jpa.hibernate.ddl-auto=update" >> application.properties && \
-    echo "upload.dir=/app/uploads" >> application.properties
-    
+WORKDIR /app    
 COPY --from=build /app/target/*.jar app.jar
-
-ENTRYPOINT ["java", "-Dspring.config.location=file:application.properties", "-jar", "app.jar"]
+ENTRYPOINT ["java", "-jar", "app.jar"]
