--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -2,12 +2,13 @@ spring.application.name=api_seller
 
 # MongoDB Configuration
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration,org.springframework.boot.autoconfigure.orm.jpa.HibernateJpaAutoConfiguration
+spring.data.mongodb.uri=mongodb://mongo:password@mongo:27017/pis?authSource=admin
 
 # File upload directory
-upload.dir=${user.dir}/uploads
+upload.dir=/img_dir
 
 # Kafka Configuration
-spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.bootstrap-servers=kafka:9092
 spring.kafka.consumer.group-id=group_id
 spring.kafka.consumer.auto-offset-reset=earliest
 
@@ -15,7 +16,8 @@ spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.Str
 spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
 spring.kafka.consumer.properties.spring.json.trusted.packages=*
 # Elasticsearch configuration
+spring.elasticsearch.uris=http://elasticsearch:9200
 spring.elasticsearch.username=elastic
 spring.elasticsearch.password=password
 
-nginx.server.url = http://localhost:80
+nginx.server.url = http://nginx:80
