--- a/docker-compose-nginx.yml
+++ b/docker-compose-nginx.yml
@@ -3,15 +3,13 @@ version: '3.8'
 services:
   nginx:
     image: nginx:latest
-    container_name: nginx_server
-    ports:
-      - "80:80"
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
       - ./data:/usr/share/nginx/html:rw
     networks:
-      - app_network
+      - seller_net
 
 networks:
-  app_network:
+  seller_net:
     driver: bridge
+    external: true
