--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -20,4 +20,4 @@ spring.elasticsearch.uris=http://elasticsearch:9200
 spring.elasticsearch.username=elastic
 spring.elasticsearch.password=password
 
-nginx.server.url = http://nginx:80
+nginx.server.url = http://localhost:8000
