--- a/docker-compose-mongo.yml
+++ b/docker-compose-mongo.yml
@@ -7,6 +7,8 @@ services:
       MONGO_INITDB_DATABASE: pis
       MONGO_INITDB_ROOT_USERNAME: mongo
       MONGO_INITDB_ROOT_PASSWORD: password
+    ports:
+      - "9000:27017"
     volumes:
       - mongo-data:/data/db
     networks:
